--- a/assets/style.css
+++ b/assets/style.css
@@ -42,6 +42,13 @@
     transform: translate(-1px, -1px);
     ;
   }
+
+  #future-weather{
+    margin-top: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: end;
+  }
   
 
 
